Adds summary report to select phys thing step in sampling activity workflow. re #128

--- a/afs/templates/views/components/workflows/physical-thing-list.htm
+++ b/afs/templates/views/components/workflows/physical-thing-list.htm
@@ -1,19 +1,13 @@
 <div style="display: flex; flex-direction: column;">
     <div>
-        <h3>Physical Things in Collection</h3>
-    </div>
-    <div>
         <!-- ko foreach: items -->
-        <div style="margin-right: 26px; padding-left:16px; padding-bottom:12px; border-bottom: 1px #bbb solid; min-height: 130px;">
-            <h4 data-bind="text: $data.name" style="color: #647c95;"></h4>
-            <p data-bind="text: $data.desc" style="color: #7a8ea4;"></p>
-            <p style="float: right;">Object ID</p>
-            <!-- ko if: $data.iiif.length > 0 -->
-                <!-- ko foreach: { data: $data.iiif, as: "annotation" } -->
-                <img data-bind="click: function(){$parents[1].selectIIIFTile($parent.$data, annotation);}, attr: {src: annotation.thumbnail}" />
-                <!-- /ko -->
-            <!-- /ko -->
-        </div>
+        <div class="resource-report" data-bind="component: {
+            name: $parent.reportLookup[$data.report.get('template_id')()].componentname,
+            params: {
+                report: $data.report,
+                summary: true
+            }
+        }, css: {'selected-instance': false}, click: function(){$parent.selectIIIFTile($data)}"></div>
         <!-- /ko -->
     </div>
 </div>
