--- a/afs/templates/views/components/workflows/physical-thing-list.htm
+++ b/afs/templates/views/components/workflows/physical-thing-list.htm
@@ -1,5 +1,5 @@
-<div style="display: flex; flex-direction: column;">
-    <div>
+<div class="" style="display: flex; flex-direction: column;">
+    <div class="physical-thing-search-list">
         <!-- ko foreach: items -->
         <div class="resource-report" data-bind="component: {
             name: $parent.reportLookup[$data.report.get('template_id')()].componentname,
