adds digital resource summary report, re #180

--- a/afs/templates/views/components/reports/visual-work.htm
+++ b/afs/templates/views/components/reports/visual-work.htm
@@ -4,7 +4,7 @@
     <div>
         <h2 class="summary-report-title">
             <span data-bind="text: report.get('displayname') "></span>
-            <a class="summary-report-link" href="javascript(void);" data-bind="text: TypeOfWorkValue"></a>
+            <a class="summary-report-link" href="javascript(void);" data-bind="text: TypeOfWorkName"></a>
         </h2>
     </div>
 
