changes to template, re #205

--- a/afs/templates/views/components/reports/modification.htm
+++ b/afs/templates/views/components/reports/modification.htm
@@ -11,7 +11,7 @@
     <!-- Header -->
     <div class="summary-report-subtitle">
         <span>
-            <span class="subtitle-category">{% trans "Created By:" %}</span>
+            <span class="subtitle-category">{% trans "Carried out by:" %}</span>
             <span class="subtitle-value">
                 <!-- <span>
                     <a target="_blank" data-bind="text: name, attr: { href: link }"></a>
@@ -21,7 +21,7 @@
                 {% trans "No artist information" %}
             </span> -->
         </span>
-        <span style="float: right; font-size: 13px;">{% trans "Visual Work Type" %}</span>
+        <span style="float: right; font-size: 13px;">{% trans "Modification Type" %}</span>
     </div>
 
     <!-- Description -->
