Persists color of primary series color. re #109

--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -19,6 +19,7 @@
             yAxisLabelSize: yAxisLabelSize,
             options: chartOptions,
             seriesStyles: seriesStyles,
+            primarySeriesColor: primarySeriesColor,
             seriesData: seriesData,
             loading: loading
         }'></div>
