Fix increment text box in charting widget

--- a/afs/templates/views/components/cards/file-renderers/afs-reader.htm
+++ b/afs/templates/views/components/cards/file-renderers/afs-reader.htm
@@ -59,21 +59,21 @@
             <div style="padding-top: 3px" class="control-label widget-input-label">{% trans "Title Text and Font Size" %}</div>
             <div style="display: inline-flex">
                 <input style="margin-left: 5px" class="form-control input-lg widget-input" data-bind="textInput: chartTitle">
-                <input style="margin-left: 5px; width: 20%" class="form-control input-lg widget-input" type="number" data-bind="textInput: titleSize">
+                <input style="margin-left: 5px; width: 20%; padding-right: 5px;" class="form-control input-lg widget-input" type="number" data-bind="textInput: titleSize">
             </div>
         </div>
         <div class="row form-group widget-wrapper">
             <div style="padding-top: 3px" class="control-label widget-input-label">{% trans "X Axis Label and Font Size" %}</div>
             <div style="display: inline-flex">
                 <input style="margin-left: 5px" class="form-control input-lg widget-input" data-bind="textInput: xAxisLabel">
-                <input style="margin-left: 5px; width: 20%" class="form-control input-lg widget-input" type="number" data-bind="textInput: xAxisLabelSize">
+                <input style="margin-left: 5px; width: 20%; padding-right: 5px;" class="form-control input-lg widget-input" type="number" data-bind="textInput: xAxisLabelSize">
             </div>
         </div>
         <div class="row form-group widget-wrapper">
             <div style="padding-top: 3px" class="control-label widget-input-label">{% trans "Y Axis Label and Font Size" %}</div>
             <div style="display: inline-flex">
                 <input style="margin-left: 5px" class="form-control input-lg widget-input" data-bind="textInput: yAxisLabel">
-                <input style="margin-left: 5px; width: 20%" class="form-control input-lg widget-input" type="number" data-bind="textInput: yAxisLabelSize">
+                <input style="margin-left: 5px; width: 20%; padding-right: 5px;" class="form-control input-lg widget-input" type="number" data-bind="textInput: yAxisLabelSize">
             </div>
         </div>
     </div>
