Uncomment "Visual Work Type" caption

--- a/afs/templates/views/components/reports/visual-work.htm
+++ b/afs/templates/views/components/reports/visual-work.htm
@@ -9,8 +9,8 @@
     </div>
 
     <!-- Header -->
-    <!--div class="summary-report-subtitle">
-        <span>
+    <div class="summary-report-subtitle">
+        <!--span>
             <span class="subtitle-category">{% trans "Created By:" %}</span>
             <span class="subtitle-value" data-bind="if: CreatedBy().length > 0">
                 <span data-bind="foreach: CreatedBy">
@@ -21,9 +21,9 @@
             <span class="subtitle-value-blank" data-bind="if: CreatedBy().length === 0">
                 {% trans "No information" %}
             </span>
-        </span>
+        </span-->
         <span style="float: right; font-size: 13px;">{% trans "Visual Work Type" %}</span>
-    </div-->
+    </div>
 
     <!-- Description -->
     <div class="summary-report-description">
