update border color on workflow buttons

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -195,6 +195,7 @@
     max-height: 150px;
     margin-right: 5px;
     margin-bottom: 5px;
+    border: 1px solid #454545;
 }
 
 .summary-report-related-panel {
