fix sampling activity workflow, re #222

--- a/afs/templates/views/components/workflows/physical-thing-list.htm
+++ b/afs/templates/views/components/workflows/physical-thing-list.htm
@@ -9,7 +9,7 @@
             }
         }, css: {'selected-instance': false}, click: function(){$parent.selectIIIFTile($data)}"></div>
         <!-- /ko -->
-        <!-- ko if: items.length === 0 -->
+        <!-- ko if: items().length === 0 -->
         <div id="rr-splash" class="rr-splash" style="margin: 50px 310px 0px 40px;">
             <!-- Image -->
             <div class="img-lg img-circle rr-splash-img-container">
